# slammers

./: .gitignore  README.md  global.css
burkhardth_slam_comps/: lidar_example.rviz
burkhardth_slam_comps/dev_ws/src/py_pubsub/: package.xml
credits/: index.html
data_lidar_test/: graph.g2o
data_lidar_test/lidar/: 1.npz  10.npz  11.npz  12.npz  13.npz  14.npz  15.npz  16.npz  17.npz  2.npz  3.npz  4.npz  5.npz  6.npz  7.npz  8.npz  9.npz
install/: local_setup.sh  setup.sh
install/cpp_ros_practice/lib/cpp_ros_practice/: publisher
install/cpp_ros_practice/share/cpp_ros_practice/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/orb_slam/lib/orb_slam/: orb_slam
install/orb_slam/share/orb_slam/: KeyFrameTrajectory.txt  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/webpub/lib/webpub/: main
install/webpub/share/webpub/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
lidar/: README.md  example_commands.txt  generate_data.sh  lidar_stock.sdf  loop.py  model.sdf  ndt_icp.py  ndt_icp2.py  plot.py  test.py  test.txt  test2.py
lidar/backend/: spec.md
lidar/backend/src/: README.md  compile_command_macos.txt  compile_command_ubuntu.txt  main.cpp
lidar/backend/src/example_data/: graph.g2o  optimized.g2o
lidar/example_data/: generate_example_data.py  points1.csv  points2.csv
lidar/front_end/: graph.py  lidar.txt  slam_frontend.py  vis.py
lidar/front_end/data/scans/: 2.npz
lidar/front_end/icp/: ndt_icp.py
lidar/frontend/: README.md  Untitled  env.py  graph.py  grid_map.py  icp.py  icp_test2.py  icp_test3.py  icp_test4.py  lidar.txt  lidar_measure.py  make_video.py  slam_frontend.py  test_g_opt.py  utils.py  vis.py  vis_single.py
lidar/frontend/data/: back.g2o  graph copy.g2o  graph.g2o  graphBACK.g2o  old.g2o  optimized.g2o
lidar/frontend/data/graphs/: graph_response189.g2o  graph_response191.g2o  graph_response308.g2o  graph_response323.g2o  graph_response366.g2o  graph_response367.g2o  graph_response368.g2o  graph_response369.g2o  graph_response371.g2o  graph_response372.g2o  graph_response373.g2o  graph_response374.g2o  graph_response41.g2o  graph_response43.g2o
lidar/frontend/data/lidar/: 1.npz  10.npz  100.npz  101.npz  102.npz  103.npz  104.npz  105.npz  106.npz  107.npz  108.npz  109.npz  11.npz  110.npz  111.npz  112.npz  113.npz  114.npz  115.npz  116.npz  117.npz  118.npz  119.npz  12.npz  120.npz  121.npz  122.npz  123.npz  124.npz  125.npz  126.npz  127.npz  128.npz  129.npz  13.npz  130.npz  131.npz  132.npz  133.npz  134.npz  (+221 more)
lidar/frontend/icp/: icp_lib.py  icp_test.py
lidar/frontend/src/: env.py  graph.py  lidar.txt  slam_frontend.py  utils.py  vis.py
lidar/frontend/src/data/: graph.g2o
lidar/frontend/src/icp/: icp_test.py  icp_test2.py  ndt_icp.py
lidar/saved_runs/: 03_graph_check_point_graph.g2o  05_emergency_save.g2o
lidar/saved_runs/01_basic/: graph.g2o
lidar/saved_runs/01_basic/lidar/: 1.npz  10.npz  11.npz  12.npz  13.npz  14.npz  15.npz  16.npz  17.npz  18.npz  19.npz  2.npz  3.npz  4.npz  5.npz  6.npz  7.npz  8.npz  9.npz
lidar/saved_runs/02_small_loop/: graph.g2o
lidar/saved_runs/02_small_loop/lidar/: 1.npz  10.npz  11.npz  12.npz  (+44 more)
lidar/saved_runs/03_small_loop_loose/: graph.g2o
lidar/saved_runs/04_big_loop/: graph.g2o
lidar/saved_runs/05_whole_room_loop/: graph.g2o
lidar/v2/types/: Edge.py  Pose2D.py  PoseGraph.py  notes.md
lidar/v3/: graph.py  graph_test.py  out.txt  slam_frontend.py  vis.py
lidar_slam/: index.html  pcr.html
log/: latest_build
orb/: README.md  config.rviz
orb/FAST/: CMakeCache.txt  CMakeLists.txt  Makefile  c_code.txt  cmake_install.cmake  fast.cpp  output.txt  output_to_c.py  trained.txt
orb/Map Survival/: MapPointSelection.cc
orb/MapPointSelection/: CMakeLists.txt  MapPointSelection.cc  README.md  convert_colmap.py
orb/MapSurvival/: CMakeLists.txt  MapPointSelection  MapPointSelection.cc  test1.txt  test1.txt.full  test1.txt.ids
orb/ORB/: CMakeLists.txt  Makefile  c_code.cpp  demo_image.py  generate_rotation_matrix.py  optimization_playground.cpp  output.txt  output_to_c.py  rBRIEF_train_results.txt  revised_output_to_c.py  rotation_matrix.txt  test_opencv_implementation.py
orb/ORB/src/: blur.cpp  briefpattern.hpp  fast.cpp  fast.hpp  harris.cpp  harris.hpp  orb.cpp  orb.hpp  processing.cpp  processing.hpp  testorb.cpp  trainRBrief.cpp
orb/Oak to ORBSLAM/: oak_to_orbslam.py
orb/orb_slam/: CMakeLists.txt
orb/orb_slam/Data/: euroc.yaml  itsSettings.yaml  rviz.rviz
orb/orb_slam/src/: BareLevenbergMarquardt.cc  Converter.cc  Frame.cc  FramePublisher.cc  LocalMapping.cc  LoopClosing.cc  ORBmatcher.cc  Optimizer.cc  Sim3Solver.cc
orb/ros2_ws/src/orb_slam/: CMakeLists.txt
orb/ros2_ws/src/orb_slam/Data/: Settings.yaml  euroc.yaml  iphone.yaml
orb/ros2_ws/src/orb_slam/include/orb_slam/: CV.h  FramePublisher.h  MapPublisher.h  PnPsolver.h  Tracking.h
orb/ros2_ws/src/orb_slam/src/: CV.cc  FramePublisher.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  MapPoint.cc  MapPublisher.cc  ORBextractor.cc  PnPsolver.cc  Tracking.cc  main.cc
orb_slam/: BA.html  index.html  mappoint.html  orb.html
src/cpp_ros_practice/: CMakeLists.txt
src/orb_slam/src/: PnPsolver.cc  Tracking.cc
src/webpub/src/: main.cpp
website/: global.css  index.html
website/credits/: index.html
website/lidar_slam/: index.html  pcr.html
website/orb_slam/: BA.html  index.html  mappoint.html  orb.html
(+490 files in other folders)
